tests/ui/rfcs/rfc-2632-const-trait-impl/non-const-op-in-closure-in-const.stderr
error: ~const can only be applied to `#[const_trait]` traits
  --> $DIR/non-const-op-in-closure-in-const.rs:10:51
   |
LL | impl<A, B> const Convert<B> for A where B: ~const From<A> {
   |                                                   ^^^^^^^

error: aborting due to previous error

